Output/Parser.output
Terminais não usados na gramática

    TOKEN_ERROR
    TOKEN_STRUCT
    TOKEN_TYPEDEF
    TOKEN_ENUM
    TOKEN_SIZEOF
    TOKEN_UNION
    TOKEN_ARROW
    TOKEN_ADDRESS_OF
    TOKEN_DOT


Estado 32 conflitos: 28 troca/redução
Estado 168 conflitos: 24 redução/redução
Estado 169 conflitos: 24 redução/redução
Estado 170 conflitos: 14 troca/redução
Estado 220 conflitos: 27 troca/redução
Estado 245 conflitos: 28 troca/redução
Estado 255 conflitos: 27 troca/redução
Estado 264 conflitos: 16 troca/redução
Estado 265 conflitos: 27 troca/redução
Estado 274 conflitos: 27 troca/redução
Estado 279 conflitos: 27 troca/redução
Estado 280 conflitos: 27 troca/redução


Gramática

    0 $accept: R_PROGRAM $end

    1 R_PROGRAM: R_PROGRAM TOKEN_EOF
    2          | R_PROGRAM R_GLOBAL_STATEMENT
    3          | R_GLOBAL_STATEMENT

    4 R_GLOBAL_STATEMENT: R_VAR_DECLARATION
    5                   | R_FUNC_PROTOTYPE
    6                   | R_FUNC_IMPLEMENT

    7 R_LOCAL_STATEMENT_LIST: ε
    8                       | R_LOCAL_STATEMENT_LIST R_LOCAL_STATEMENT
    9                       | R_LOCAL_STATEMENT

   10 R_LOCAL_STATEMENT: R_IF_STATEMENT
   11                  | R_GOTO
   12                  | R_SWITCH
   13                  | R_BREAK
   14                  | R_CONTINUE
   15                  | R_DO_WHILE_LOOP
   16                  | R_LABEL
   17                  | R_WHILE_LOOP
   18                  | R_FOR_LOOP
   19                  | R_COMPOUND_STATEMENT
   20                  | R_RETURN
   21                  | R_VAR_DECLARATION
   22                  | R_VAR_ASSIGNMENT
   23                  | R_FUNC_CALL TOKEN_SEMI
   24                  | R_INC_DEC TOKEN_SEMI

   25 R_COMPOUND_STATEMENT: TOKEN_LEFT_BRACE R_LOCAL_STATEMENT_LIST TOKEN_RIGHT_BRACE
   26                     | TOKEN_LEFT_BRACE TOKEN_RIGHT_BRACE

   27 R_CONTINUE: TOKEN_CONTINUE TOKEN_SEMI

   28 R_BREAK: TOKEN_BREAK TOKEN_SEMI

   29 R_GOTO: TOKEN_GOTO TOKEN_ID TOKEN_SEMI

   30 R_SWITCH: TOKEN_SWITCH TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES TOKEN_LEFT_BRACE R_SWITCH_BODY TOKEN_RIGHT_BRACE

   31 R_SWITCH_BODY: R_CASE_LIST R_DEFAULT
   32              | R_CASE_LIST
   33              | R_DEFAULT

   34 R_CASE_LIST: R_CASE_LIST R_CASE
   35            | R_CASE

   36 R_CASE: TOKEN_CASE TOKEN_NUM TOKEN_COLON R_LOCAL_STATEMENT_LIST
   37       | TOKEN_CASE TOKEN_CNUM TOKEN_COLON R_LOCAL_STATEMENT_LIST

   38 R_DEFAULT: TOKEN_DEFAULT TOKEN_COLON R_LOCAL_STATEMENT_LIST

   39 R_IF_STATEMENT: TOKEN_IF TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES R_LOCAL_STATEMENT_LIST
   40               | TOKEN_IF TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES R_LOCAL_STATEMENT_LIST TOKEN_ELSE R_LOCAL_STATEMENT_LIST

   41 R_RETURN: TOKEN_RETURN TOKEN_SEMI
   42         | TOKEN_RETURN R_EXP TOKEN_SEMI

   43 R_WHILE_LOOP: TOKEN_WHILE TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES R_LOCAL_STATEMENT
   44             | TOKEN_WHILE TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES TOKEN_SEMI

   45 R_DO_WHILE_LOOP: TOKEN_DO R_LOCAL_STATEMENT TOKEN_WHILE TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES TOKEN_SEMI

   46 R_FOR_LOOP: TOKEN_FOR TOKEN_LEFT_PARENTHESES R_FOR_INIT_FIELD TOKEN_SEMI R_EXP TOKEN_SEMI R_FOR_ASSIGNMENT_FIELD TOKEN_RIGHT_PARENTHESES R_LOCAL_STATEMENT

   47 R_FOR_INIT_FIELD: TOKEN_ID TOKEN_ASSIGN R_EXP

   48 R_FOR_ASSIGNMENT_FIELD: R_SIMPLE_VAR_ASSIGN
   49                       | R_COMPOUND_VAR_ASSIGN
   50                       | R_INC_DEC

   51 R_LABEL: TOKEN_ID TOKEN_COLON

   52 R_FUNC_SIGNATURE: R_VAR_PREAMBLE TOKEN_ID TOKEN_LEFT_PARENTHESES R_ARG_LIST TOKEN_RIGHT_PARENTHESES

   53 R_FUNC_PROTOTYPE: R_FUNC_SIGNATURE TOKEN_SEMI

   54 R_FUNC_IMPLEMENT: R_FUNC_SIGNATURE R_COMPOUND_STATEMENT

   55 R_FUNC_CALL: TOKEN_ID TOKEN_LEFT_PARENTHESES R_EXP_LIST TOKEN_RIGHT_PARENTHESES

   56 R_EXP_LIST: ε
   57           | R_EXP_LIST TOKEN_COMMA R_EXP
   58           | R_EXP

   59 R_ARG_LIST: ε
   60           | R_ARG_LIST TOKEN_COMMA R_ARG
   61           | R_ARG

   62 R_ARG: R_MOD_QUALIFIER R_SIGN_QUALIFIER R_TYPE_ALL TOKEN_ID
   63      | R_SIGN_QUALIFIER R_TYPE_ALL TOKEN_ID
   64      | R_MOD_QUALIFIER R_TYPE_ALL TOKEN_ID
   65      | R_TYPE_ALL TOKEN_ID

   66 R_VAR_DECLARATION: R_VAR_PREAMBLE R_ID_LIST TOKEN_SEMI
   67                  | R_ARR_DECLARATION

   68 R_ARR_DECLARATION: R_VAR_PREAMBLE TOKEN_ID R_ARR_SIZE TOKEN_SEMI

   69 R_ARR_SIZE: TOKEN_LEFT_BRACKET TOKEN_NUM TOKEN_RIGHT_BRACKET

   70 R_ID_LIST: R_ID_LIST TOKEN_COMMA TOKEN_ID
   71          | R_ID_LIST TOKEN_COMMA R_SIMPLE_VAR_ASSIGN
   72          | R_SIMPLE_VAR_ASSIGN
   73          | TOKEN_ID

   74 R_VAR_ASSIGNMENT: R_SIMPLE_VAR_ASSIGN TOKEN_SEMI
   75                 | R_COMPOUND_VAR_ASSIGN TOKEN_SEMI
   76                 | R_ARRAY_INDEX TOKEN_ASSIGN R_EXP TOKEN_SEMI
   77                 | R_POINTER_CONTENT TOKEN_ASSIGN R_EXP TOKEN_SEMI

   78 R_COMPOUND_VAR_ASSIGN: TOKEN_ID R_COMPOUND_ASSIGN_OPERATOR R_EXP

   79 R_SIMPLE_VAR_ASSIGN: TOKEN_ID TOKEN_ASSIGN R_EXP

   80 R_VAR_PREAMBLE: R_VISIBILITY_QUALIFIER R_MOD_QUALIFIER R_SIGN_QUALIFIER R_TYPE_ALL
   81               | R_VISIBILITY_QUALIFIER R_MOD_QUALIFIER R_TYPE_ALL
   82               | R_VISIBILITY_QUALIFIER R_SIGN_QUALIFIER R_TYPE_ALL
   83               | R_MOD_QUALIFIER R_SIGN_QUALIFIER R_TYPE_ALL
   84               | R_VISIBILITY_QUALIFIER R_TYPE_ALL
   85               | R_MOD_QUALIFIER R_TYPE_ALL
   86               | R_SIGN_QUALIFIER R_TYPE_ALL
   87               | R_TYPE_ALL

   88 R_EXP: TOKEN_MINUS R_EXP
   89      | R_EXP R_ARITHMETIC_OPERATOR R_TERM
   90      | R_EXP R_CONDITION_OPERATOR R_TERM
   91      | R_EXP R_BITWISE_OPERATOR R_TERM
   92      | TOKEN_BITWISE_NOT R_TERM
   93      | R_EXP R_LOGIC_OPERATOR R_TERM
   94      | R_EXP TOKEN_TERNARY R_EXP TOKEN_COLON R_EXP
   95      | R_TERM

   96 R_TERM: R_TERM R_PRIORITY_OPERATOR R_OPERAND
   97       | R_OPERAND

   98 R_OPERAND: R_INC_DEC
   99          | TOKEN_LOGICAL_NOT R_FACTOR
  100          | R_TYPE_CAST R_FACTOR
  101          | R_FACTOR

  102 R_FACTOR: TOKEN_LEFT_PARENTHESES R_EXP TOKEN_RIGHT_PARENTHESES
  103         | R_ARRAY_INDEX
  104         | TOKEN_MINUS TOKEN_NUM
  105         | TOKEN_NUM
  106         | TOKEN_ID
  107         | R_POINTER_CONTENT
  108         | TOKEN_MINUS TOKEN_FNUM
  109         | TOKEN_FNUM
  110         | TOKEN_CNUM
  111         | TOKEN_STR
  112         | TOKEN_BITWISE_AND R_ARRAY_INDEX
  113         | TOKEN_BITWISE_AND TOKEN_ID
  114         | R_FUNC_CALL

  115 R_ARRAY_INDEX: TOKEN_ID TOKEN_LEFT_BRACKET R_EXP TOKEN_RIGHT_BRACKET

  116 R_POINTER_CONTENT: TOKEN_ASTERISK TOKEN_ID

  117 R_INC_DEC: R_PRE_INCREMENT
  118          | R_POST_INCREMENT
  119          | R_PRE_DECREMENT
  120          | R_POST_DECREMENT

  121 R_PRE_INCREMENT: TOKEN_INCREMENT TOKEN_ID

  122 R_POST_INCREMENT: TOKEN_ID TOKEN_INCREMENT

  123 R_PRE_DECREMENT: TOKEN_DECREMENT TOKEN_ID

  124 R_POST_DECREMENT: TOKEN_ID TOKEN_DECREMENT

  125 R_ARITHMETIC_OPERATOR: TOKEN_PLUS
  126                      | TOKEN_MINUS
  127                      | TOKEN_RIGHT_SHIFT
  128                      | TOKEN_LEFT_SHIFT

  129 R_PRIORITY_OPERATOR: TOKEN_ASTERISK
  130                    | TOKEN_OVER
  131                    | TOKEN_PERCENT

  132 R_CONDITION_OPERATOR: TOKEN_GREATER_THAN
  133                     | TOKEN_LESS_THAN_OR_EQUAL
  134                     | TOKEN_GREATER_THAN_OR_EQUAL
  135                     | TOKEN_LESS_THAN
  136                     | TOKEN_EQUAL
  137                     | TOKEN_NOT_EQUAL

  138 R_LOGIC_OPERATOR: TOKEN_LOGICAL_AND
  139                 | TOKEN_LOGICAL_OR

  140 R_BITWISE_OPERATOR: TOKEN_BITWISE_AND
  141                   | TOKEN_BITWISE_OR
  142                   | TOKEN_BITWISE_XOR

  143 R_COMPOUND_ASSIGN_OPERATOR: TOKEN_PLUS_ASSIGN
  144                           | TOKEN_MINUS_ASSIGN
  145                           | TOKEN_MODULUS_ASSIGN
  146                           | TOKEN_LEFT_SHIFT_ASSIGN
  147                           | TOKEN_RIGHT_SHIFT_ASSIGN
  148                           | TOKEN_BITWISE_AND_ASSIGN
  149                           | TOKEN_BITWISE_OR_ASSIGN
  150                           | TOKEN_BITWISE_XOR_ASSIGN
  151                           | TOKEN_MULTIPLY_ASSIGN
  152                           | TOKEN_DIVIDE_ASSIGN

  153 R_TYPE_CAST: TOKEN_LEFT_PARENTHESES R_TYPE_ALL TOKEN_RIGHT_PARENTHESES

  154 R_TYPE_ALL: R_TYPE
  155           | R_TYPE_PTR

  156 R_TYPE_PTR: R_TYPE TOKEN_ASTERISK

  157 R_TYPE: TOKEN_CHAR
  158       | TOKEN_SHORT
  159       | TOKEN_INT
  160       | TOKEN_LONG
  161       | TOKEN_FLOAT
  162       | TOKEN_DOUBLE
  163       | TOKEN_LONG TOKEN_DOUBLE
  164       | TOKEN_VOID

  165 R_VISIBILITY_QUALIFIER: TOKEN_STATIC
  166                       | TOKEN_EXTERN

  167 R_MOD_QUALIFIER: TOKEN_CONSTANT
  168                | TOKEN_VOLATILE

  169 R_SIGN_QUALIFIER: TOKEN_SIGNED
  170                 | TOKEN_UNSIGNED


Terminais, com regras onde aparecem

    $end (0) 0
    error (256)
    TOKEN_IF (258) 39 40
    TOKEN_EOF (259) 1
    TOKEN_ERROR (260)
    TOKEN_ELSE (261) 40
    TOKEN_DO (262) 45
    TOKEN_WHILE (263) 43 44 45
    TOKEN_FOR (264) 46
    TOKEN_SWITCH (265) 30
    TOKEN_CASE (266) 36 37
    TOKEN_DEFAULT (267) 38
    TOKEN_RETURN (268) 41 42
    TOKEN_BREAK (269) 28
    TOKEN_INT (270) 159
    TOKEN_FLOAT (271) 161
    TOKEN_DOUBLE (272) 162 163
    TOKEN_CHAR (273) 157
    TOKEN_VOID (274) 164
    TOKEN_STRUCT (275)
    TOKEN_TYPEDEF (276)
    TOKEN_CONTINUE (277) 27
    TOKEN_EXTERN (278) 166
    TOKEN_GOTO (279) 29
    TOKEN_LONG (280) 160 163
    TOKEN_ENUM (281)
    TOKEN_SHORT (282) 158
    TOKEN_SIZEOF (283)
    TOKEN_STATIC (284) 165
    TOKEN_SIGNED (285) 169
    TOKEN_UNION (286)
    TOKEN_UNSIGNED (287) 170
    TOKEN_VOLATILE (288) 168
    TOKEN_ASSIGN (289) 47 76 77 79
    TOKEN_PLUS (290) 125
    TOKEN_MINUS (291) 88 104 108 126
    TOKEN_OVER (292) 130
    TOKEN_PERCENT (293) 131
    TOKEN_LEFT_PARENTHESES (294) 30 39 40 43 44 45 46 52 55 102 153
    TOKEN_RIGHT_PARENTHESES (295) 30 39 40 43 44 45 46 52 55 102 153
    TOKEN_LEFT_BRACE (296) 25 26 30
    TOKEN_RIGHT_BRACE (297) 25 26 30
    TOKEN_LEFT_BRACKET (298) 69 115
    TOKEN_RIGHT_BRACKET (299) 69 115
    TOKEN_TERNARY (300) 94
    TOKEN_SEMI (301) 23 24 27 28 29 41 42 44 45 46 53 66 68 74 75 76 77
    TOKEN_COLON (302) 36 37 38 51 94
    TOKEN_COMMA (303) 57 60 70 71
    TOKEN_INCREMENT (304) 121 122
    TOKEN_DECREMENT (305) 123 124
    TOKEN_BITWISE_AND (306) 112 113 140
    TOKEN_BITWISE_OR (307) 141
    TOKEN_LOGICAL_AND (308) 138
    TOKEN_BITWISE_NOT (309) 92
    TOKEN_BITWISE_XOR (310) 142
    TOKEN_LOGICAL_NOT (311) 99
    TOKEN_LOGICAL_OR (312) 139
    TOKEN_EQUAL (313) 136
    TOKEN_NOT_EQUAL (314) 137
    TOKEN_LESS_THAN (315) 135
    TOKEN_GREATER_THAN (316) 132
    TOKEN_LESS_THAN_OR_EQUAL (317) 133
    TOKEN_GREATER_THAN_OR_EQUAL (318) 134
    TOKEN_RIGHT_SHIFT (319) 127
    TOKEN_LEFT_SHIFT (320) 128
    TOKEN_PLUS_ASSIGN (321) 143
    TOKEN_MINUS_ASSIGN (322) 144
    TOKEN_LEFT_SHIFT_ASSIGN (323) 146
    TOKEN_RIGHT_SHIFT_ASSIGN (324) 147
    TOKEN_BITWISE_AND_ASSIGN (325) 148
    TOKEN_BITWISE_OR_ASSIGN (326) 149
    TOKEN_BITWISE_XOR_ASSIGN (327) 150
    TOKEN_MULTIPLY_ASSIGN (328) 151
    TOKEN_DIVIDE_ASSIGN (329) 152
    TOKEN_MODULUS_ASSIGN (330) 145
    TOKEN_ARROW (331)
    TOKEN_CONSTANT (332) 167
    TOKEN_ASTERISK (333) 116 129 156
    TOKEN_ADDRESS_OF (334)
    TOKEN_DOT (335)
    TOKEN_FNUM (336) 108 109
    TOKEN_NUM (337) 36 69 104 105
    TOKEN_STR (338) 111
    TOKEN_ID (339) 29 47 51 52 55 62 63 64 65 68 70 73 78 79 106 113 115 116 121 122 123 124
    TOKEN_CNUM (340) 37 110


Não terminais, com regras onde aparecem

    $accept (86)
        à esquerda: 0
    R_PROGRAM (87)
        à esquerda: 1 2 3
        à direita: 0 1 2
    R_GLOBAL_STATEMENT (88)
        à esquerda: 4 5 6
        à direita: 2 3
    R_LOCAL_STATEMENT_LIST (89)
        à esquerda: 7 8 9
        à direita: 8 25 36 37 38 39 40
    R_LOCAL_STATEMENT (90)
        à esquerda: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        à direita: 8 9 43 45 46
    R_COMPOUND_STATEMENT (91)
        à esquerda: 25 26
        à direita: 19 54
    R_CONTINUE (92)
        à esquerda: 27
        à direita: 14
    R_BREAK (93)
        à esquerda: 28
        à direita: 13
    R_GOTO (94)
        à esquerda: 29
        à direita: 11
    R_SWITCH (95)
        à esquerda: 30
        à direita: 12
    R_SWITCH_BODY (96)
        à esquerda: 31 32 33
        à direita: 30
    R_CASE_LIST (97)
        à esquerda: 34 35
        à direita: 31 32 34
    R_CASE (98)
        à esquerda: 36 37
        à direita: 34 35
    R_DEFAULT (99)
        à esquerda: 38
        à direita: 31 33
    R_IF_STATEMENT (100)
        à esquerda: 39 40
        à direita: 10
    R_RETURN (101)
        à esquerda: 41 42
        à direita: 20
    R_WHILE_LOOP (102)
        à esquerda: 43 44
        à direita: 17
    R_DO_WHILE_LOOP (103)
        à esquerda: 45
        à direita: 15
    R_FOR_LOOP (104)
        à esquerda: 46
        à direita: 18
    R_FOR_INIT_FIELD (105)
        à esquerda: 47
        à direita: 46
    R_FOR_ASSIGNMENT_FIELD (106)
        à esquerda: 48 49 50
        à direita: 46
    R_LABEL (107)
        à esquerda: 51
        à direita: 16
    R_FUNC_SIGNATURE (108)
        à esquerda: 52
        à direita: 53 54
    R_FUNC_PROTOTYPE (109)
        à esquerda: 53
        à direita: 5
    R_FUNC_IMPLEMENT (110)
        à esquerda: 54
        à direita: 6
    R_FUNC_CALL (111)
        à esquerda: 55
        à direita: 23 114
    R_EXP_LIST (112)
        à esquerda: 56 57 58
        à direita: 55 57
    R_ARG_LIST (113)
        à esquerda: 59 60 61
        à direita: 52 60
    R_ARG (114)
        à esquerda: 62 63 64 65
        à direita: 60 61
    R_VAR_DECLARATION (115)
        à esquerda: 66 67
        à direita: 4 21
    R_ARR_DECLARATION (116)
        à esquerda: 68
        à direita: 67
    R_ARR_SIZE (117)
        à esquerda: 69
        à direita: 68
    R_ID_LIST (118)
        à esquerda: 70 71 72 73
        à direita: 66 70 71
    R_VAR_ASSIGNMENT (119)
        à esquerda: 74 75 76 77
        à direita: 22
    R_COMPOUND_VAR_ASSIGN (120)
        à esquerda: 78
        à direita: 49 75
    R_SIMPLE_VAR_ASSIGN (121)
        à esquerda: 79
        à direita: 48 71 72 74
    R_VAR_PREAMBLE (122)
        à esquerda: 80 81 82 83 84 85 86 87
        à direita: 52 66 68
    R_EXP (123)
        à esquerda: 88 89 90 91 92 93 94 95
        à direita: 30 39 40 42 43 44 45 46 47 57 58 76 77 78 79 88 89 90 91 93 94 102 115
    R_TERM (124)
        à esquerda: 96 97
        à direita: 89 90 91 92 93 95 96
    R_OPERAND (125)
        à esquerda: 98 99 100 101
        à direita: 96 97
    R_FACTOR (126)
        à esquerda: 102 103 104 105 106 107 108 109 110 111 112 113 114
        à direita: 99 100 101
    R_ARRAY_INDEX (127)
        à esquerda: 115
        à direita: 76 103 112
    R_POINTER_CONTENT (128)
        à esquerda: 116
        à direita: 77 107
    R_INC_DEC (129)
        à esquerda: 117 118 119 120
        à direita: 24 50 98
    R_PRE_INCREMENT (130)
        à esquerda: 121
        à direita: 117
    R_POST_INCREMENT (131)
        à esquerda: 122
        à direita: 118
    R_PRE_DECREMENT (132)
        à esquerda: 123
        à direita: 119
    R_POST_DECREMENT (133)
        à esquerda: 124
        à direita: 120
    R_ARITHMETIC_OPERATOR (134)
        à esquerda: 125 126 127 128
        à direita: 89
    R_PRIORITY_OPERATOR (135)
        à esquerda: 129 130 131
        à direita: 96
    R_CONDITION_OPERATOR (136)
        à esquerda: 132 133 134 135 136 137
        à direita: 90
    R_LOGIC_OPERATOR (137)
        à esquerda: 138 139
        à direita: 93
    R_BITWISE_OPERATOR (138)
        à esquerda: 140 141 142
        à direita: 91
    R_COMPOUND_ASSIGN_OPERATOR (139)
        à esquerda: 143 144 145 146 147 148 149 150 151 152
        à direita: 78
    R_TYPE_CAST (140)
        à esquerda: 153
        à direita: 100
    R_TYPE_ALL (141)
        à esquerda: 154 155
        à direita: 62 63 64 65 80 81 82 83 84 85 86 87 153
    R_TYPE_PTR (142)
        à esquerda: 156
        à direita: 155
    R_TYPE (143)
        à esquerda: 157 158 159 160 161 162 163 164
        à direita: 154 156
    R_VISIBILITY_QUALIFIER (144)
        à esquerda: 165 166
        à direita: 80 81 82 84
    R_MOD_QUALIFIER (145)
        à esquerda: 167 168
        à direita: 62 64 80 81 83 85
    R_SIGN_QUALIFIER (146)
        à esquerda: 169 170
        à direita: 62 63 80 82 83 86


Estado 0

    0 $accept: • R_PROGRAM $end

    TOKEN_INT       troca e vai para estado 1
    TOKEN_FLOAT     troca e vai para estado 2
    TOKEN_DOUBLE    troca e vai para estado 3
    TOKEN_CHAR      troca e vai para estado 4
    TOKEN_VOID      troca e vai para estado 5
    TOKEN_EXTERN    troca e vai para estado 6
    TOKEN_LONG      troca e vai para estado 7
    TOKEN_SHORT     troca e vai para estado 8
    TOKEN_STATIC    troca e vai para estado 9
    TOKEN_SIGNED    troca e vai para estado 10
    TOKEN_UNSIGNED  troca e vai para estado 11
    TOKEN_VOLATILE  troca e vai para estado 12
    TOKEN_CONSTANT  troca e vai para estado 13

    R_PROGRAM               vai para estado 14
    R_GLOBAL_STATEMENT      vai para estado 15
    R_FUNC_SIGNATURE        vai para estado 16
    R_FUNC_PROTOTYPE        vai para estado 17
    R_FUNC_IMPLEMENT        vai para estado 18
    R_VAR_DECLARATION       vai para estado 19
    R_ARR_DECLARATION       vai para estado 20
    R_VAR_PREAMBLE          vai para estado 21
    R_TYPE_ALL              vai para estado 22
    R_TYPE_PTR              vai para estado 23
    R_TYPE                  vai para estado 24
    R_VISIBILITY_QUALIFIER  vai para estado 25
    R_MOD_QUALIFIER         vai para estado 26
    R_SIGN_QUALIFIER        vai para estado 27


Estado 1

  159 R_TYPE: TOKEN_INT •

    $default  redução com regra 159 (R_TYPE)


Estado 2

  161 R_TYPE: TOKEN_FLOAT •

    $default  redução com regra 161 (R_TYPE)


Estado 3

  162 R_TYPE: TOKEN_DOUBLE •

    $default  redução com regra 162 (R_TYPE)


Estado 4

  157 R_TYPE: TOKEN_CHAR •

    $default  redução com regra 157 (R_TYPE)


Estado 5

  164 R_TYPE: TOKEN_VOID •

    $default  redução com regra 164 (R_TYPE)


Estado 6

  166 R_VISIBILITY_QUALIFIER: TOKEN_EXTERN •

    $default  redução com regra 166 (R_VISIBILITY_QUALIFIER)


Estado 7

  160 R_TYPE: TOKEN_LONG •
  163       | TOKEN_LONG • TOKEN_DOUBLE

    TOKEN_DOUBLE  troca e vai para estado 28

    $default  redução com regra 160 (R_TYPE)


Estado 8

  158 R_TYPE: TOKEN_SHORT •

    $default  redução com regra 158 (R_TYPE)


Estado 9

  165 R_VISIBILITY_QUALIFIER: TOKEN_STATIC •

    $default  redução com regra 165 (R_VISIBILITY_QUALIFIER)


Estado 10

  169 R_SIGN_QUALIFIER: TOKEN_SIGNED •

    $default  redução com regra 169 (R_SIGN_QUALIFIER)


Estado 11

  170 R_SIGN_QUALIFIER: TOKEN_UNSIGNED •

    $default  redução com regra 170 (R_SIGN_QUALIFIER)


Estado 12

  168 R_MOD_QUALIFIER: TOKEN_VOLATILE •

    $default  redução com regra 168 (R_MOD_QUALIFIER)


Estado 13

  167 R_MOD_QUALIFIER: TOKEN_CONSTANT •

    $default  redução com regra 167 (R_MOD_QUALIFIER)


Estado 14

    0 $accept: R_PROGRAM • $end
    1 R_PROGRAM: R_PROGRAM • TOKEN_EOF
    2          | R_PROGRAM • R_GLOBAL_STATEMENT

    $end            troca e vai para estado 29
    TOKEN_EOF       troca e vai para estado 30
    TOKEN_INT       troca e vai para estado 1
    TOKEN_FLOAT     troca e vai para estado 2
    TOKEN_DOUBLE    troca e vai para estado 3
    TOKEN_CHAR      troca e vai para estado 4
    TOKEN_VOID      troca e vai para estado 5
    TOKEN_EXTERN    troca e vai para estado 6
    TOKEN_LONG      troca e vai para estado 7
    TOKEN_SHORT     troca e vai para estado 8
    TOKEN_STATIC    troca e vai para estado 9
    TOKEN_SIGNED    troca e vai para estado 10
    TOKEN_UNSIGNED  troca e vai para estado 11
    TOKEN_VOLATILE  troca e vai para estado 12
    TOKEN_CONSTANT  troca e vai para estado 13

    R_GLOBAL_STATEMENT      vai para estado 31
    R_FUNC_SIGNATURE        vai para estado 16
    R_FUNC_PROTOTYPE        vai para estado 17
    R_FUNC_IMPLEMENT        vai para estado 18
    R_VAR_DECLARATION       vai para estado 19
    R_ARR_DECLARATION       vai para estado 20
    R_VAR_PREAMBLE          vai para estado 21
    R_TYPE_ALL              vai para estado 22
    R_TYPE_PTR              vai para estado 23
    R_TYPE                  vai para estado 24
    R_VISIBILITY_QUALIFIER  vai para estado 25
    R_MOD_QUALIFIER         vai para estado 26
    R_SIGN_QUALIFIER        vai para estado 27


Estado 15

    3 R_PROGRAM: R_GLOBAL_STATEMENT •

    $default  redução com regra 3 (R_PROGRAM)


Estado 16

   53 R_FUNC_PROTOTYPE: R_FUNC_SIGNATURE • TOKEN_SEMI
   54 R_FUNC_IMPLEMENT: R_FUNC_SIGNATURE • R_COMPOUND_STATEMENT

    TOKEN_LEFT_BRACE  troca e vai para estado 32
    TOKEN_SEMI        troca e vai para estado 33

    R_COMPOUND_STATEMENT  vai para estado 34


Estado 17

    5 R_GLOBAL_STATEMENT: R_FUNC_PROTOTYPE •

    $default  redução com regra 5 (R_GLOBAL_STATEMENT)


Estado 18

    6 R_GLOBAL_STATEMENT: R_FUNC_IMPLEMENT •

    $default  redução com regra 6 (R_GLOBAL_STATEMENT)


Estado 19

    4 R_GLOBAL_STATEMENT: R_VAR_DECLARATION •

    $default  redução com regra 4 (R_GLOBAL_STATEMENT)


Estado 20

   67 R_VAR_DECLARATION: R_ARR_DECLARATION •

    $default  redução com regra 67 (R_VAR_DECLARATION)


Estado 21

   52 R_FUNC_SIGNATURE: R_VAR_PREAMBLE • TOKEN_ID TOKEN_LEFT_PARENTHESES R_ARG_LIST TOKEN_RIGHT_PARENTHESES
   66 R_VAR_DECLARATION: R_VAR_PREAMBLE • R_ID_LIST TOKEN_SEMI
   68 R_ARR_DECLARATION: R_VAR_PREAMBLE • TOKEN_ID R_ARR_SIZE TOKEN_SEMI

    TOKEN_ID  troca e vai para estado 35

    R_ID_LIST            vai para estado 36
    R_SIMPLE_VAR_ASSIGN  vai para estado 37


Estado 22

   87 R_VAR_PREAMBLE: R_TYPE_ALL •

    $default  redução com regra 87 (R_VAR_PREAMBLE)


Estado 23

  155 R_TYPE_ALL: R_TYPE_PTR •

    $default  redução com regra 155 (R_TYPE_ALL)


Estado 24

  154 R_TYPE_ALL: R_TYPE •
  156 R_TYPE_PTR: R_TYPE • TOKEN_ASTERISK

    TOKEN_ASTERISK  troca e vai para estado 38

    $default  redução com regra 154 (R_TYPE_ALL)


Estado 25

   80 R_VAR_PREAMBLE: R_VISIBILITY_QUALIFIER • R_MOD_QUALIFIER R_SIGN_QUALIFIER R_TYPE_ALL
   81               | R_VISIBILITY_QUALIFIER • R_MOD_QUALIFIER R_TYPE_ALL
   82               | R_VISIBILITY_QUALIFIER • R_SIGN_QUALIFIER R_TYPE_ALL
   84               | R_VISIBILITY_QUALIFIER • R_TYPE_ALL

    TOKEN_INT       troca e vai para estado 1
    TOKEN_FLOAT     troca e vai para estado 2
    TOKEN_DOUBLE    troca e vai para estado 3
    TOKEN_CHAR      troca e vai para estado 4
    TOKEN_VOID      troca e vai para estado 5
    TOKEN_LONG      troca e vai para estado 7
    TOKEN_SHORT     troca e vai para estado 8
    TOKEN_SIGNED    troca e vai para estado 10
    TOKEN_UNSIGNED  troca e vai para estado 11
    TOKEN_VOLATILE  troca e vai para estado 12
    TOKEN_CONSTANT  troca e vai para estado 13

    R_TYPE_ALL        vai para estado 39
    R_TYPE_PTR        vai para estado 23
    R_TYPE            vai para estado 24
    R_MOD_QUALIFIER   vai para estado 40
    R_SIGN_QUALIFIER  vai para estado 41


Estado 26

   83 R_VAR_PREAMBLE: R_MOD_QUALIFIER • R_SIGN_QUALIFIER R_TYPE_ALL
   85               | R_MOD_QUALIFIER • R_TYPE_ALL

    TOKEN_INT       troca e vai para estado 1
    TOKEN_FLOAT     troca e vai para estado 2
    TOKEN_DOUBLE    troca e vai para estado 3
    TOKEN_CHAR      troca e vai para estado 4
    TOKEN_VOID      troca e vai para estado 5
    TOKEN_LONG      troca e vai para estado 7
    TOKEN_SHORT     troca e vai para estado 8
    TOKEN_SIGNED    troca e vai para estado 10
    TOKEN_UNSIGNED  troca e vai para estado 11

    R_TYPE_ALL        vai para estado 42
    R_TYPE_PTR        vai para estado 23
    R_TYPE            vai para estado 24
    R_SIGN_QUALIFIER  vai para estado 43


Estado 27

   86 R_VAR_PREAMBLE: R_SIGN_QUALIFIER • R_TYPE_ALL

    TOKEN_INT     troca e vai para estado 1
    TOKEN_FLOAT   troca e vai para estado 2
    TOKEN_DOUBLE  troca e vai para estado 3
    TOKEN_CHAR    troca e vai para estado 4
    TOKEN_VOID    troca e vai para estado 5
    TOKEN_LONG    troca e vai para estado 7
    TOKEN_SHORT   troca e vai para estado 8

    R_TYPE_ALL  vai para estado 44
    R_TYPE_PTR  vai para estado 23
    R_TYPE      vai para estado 24


Estado 28

  163 R_TYPE: TOKEN_LONG TOKEN_DOUBLE •

    $default  redução com regra 163 (R_TYPE)


Estado 29

    0 $accept: R_PROGRAM $end •

    $default  aceitar


Estado 30

    1 R_PROGRAM: R_PROGRAM TOKEN_EOF •

    $default  redução com regra 1 (R_PROGRAM)


Estado 31

    2 R_PROGRAM: R_PROGRAM R_GLOBAL_STATEMENT •

    $default  redução com regra 2 (R_PROGRAM)


Estado 32

   25 R_COMPOUND_STATEMENT: TOKEN_LEFT_BRACE • R_LOCAL_STATEMENT_LIST TOKEN_RIGHT_BRACE
   26                     | TOKEN_LEFT_BRACE • TOKEN_RIGHT_BRACE
